--- a/styles/common.css
+++ b/styles/common.css
@@ -1,13 +1,16 @@
 html, body {
   margin: 0;
   height: 100%;
+  width: 100%;
   line-height: 1.5;
   font-size: 15px;
-  color: lightgrey;
-  background-color: rgb(45, 41, 38);
+  color: #fefefe;
+  background-color: #0b0c0f;
   font-family: 'Comic Neue', cursive;
   font-family: 'Roboto Condensed', sans-serif;
 }
+
+
 
 a {
   text-decoration: none;
@@ -17,4 +20,31 @@ a {
 h2 {
   font-weight: 400;
   margin: 10px 0;
+}
+
+.page-content {
+  display: grid;
+  grid-template-rows: .2fr 1fr;
+  grid-template-columns: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.navbar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  color: #45a29e;
+}
+
+.question-one, .question-two, .question-three, .question-four {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 2% 0 2% 0;
+}
+
+.content-gallery {
+  display: flex;
+  margin-top: 2%;
 }
